--- a/SS/WZDH/index.html
+++ b/SS/WZDH/index.html
@@ -236,7 +236,7 @@
                   <use xlink:href="#yinle"></use>
                 </svg><span>音乐</span></a></li>
 
-            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="http://shiguofu.eicp.net:2345/SS/GW/" target="_blank"><svg
+            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://asan-13.github.io/SS/GW/" target="_blank"><svg
                   class="icon" aria-hidden="true">
                   <use xlink:href="#shisan"></use>
                 </svg><span>手作十三</span></a></li>
@@ -300,7 +300,7 @@
                   <use xlink:href="#baidujiexi"></use>
                 </svg><span>百度云解析</span></a></li>
 
-            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="http://shiguofu.eicp.net:2345/SS/WZDH/KJJ.html" target="_blank"><svg
+            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://asan-13.github.io/SS/WZDH/KJJ.html" target="_blank"><svg
                   class="icon" aria-hidden="true">
                   <use xlink:href="#kuaijiejian"></use>
                 </svg><span>Mac 快捷键</span></a></li>
