--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>时间项目提醒</title>
+    <title>Sky 事件</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
@@ -743,7 +743,7 @@
                 name: "AURORA",
                 startDate: getTodayDate(),
                 startTime: "15:10",
-                displayThreshold: 2,
+                displayThreshold: 30,
                 displayThresholdUnit: "minute",
                 priority: "low",
                 recurrence: {
