--- a/SS/sky/index v50.html
+++ b/SS/sky/index v50.html
@@ -4,8 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sky 事件 时间</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- 修复Font Awesome图标引用路径 -->
-    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- 配置Tailwind自定义颜色和字体 - 暗黑模式 -->
     <script>
@@ -17,7 +16,7 @@
                             high: '#ef4444',    // 红色表示高优先级
                             medium: '#f59e0b',  // 黄色表示中优先级
                             low: '#10b981',     // 绿色表示低优先级
-                            none: '#64748b'     // 灰色表示无优先级
+                            none: '#000000'     // 黑色表示无优先级
                         },
                         primary: '#60a5fa',   // 稍浅的蓝色，适合暗黑模式
                         secondary: '#94a3b8', // 稍浅的灰色，适合暗黑模式
@@ -278,7 +277,7 @@
                         <option value="high">高 (红色)</option>
                         <option value="medium" selected="">中 (黄色)</option>
                         <option value="low">低 (绿色)</option>
-                        <option value="none">无 (灰色)</option>
+                        <option value="none">无 (黑色)</option>
                     </select>
                 </div>
                 
