--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -796,7 +796,7 @@
                 startTime: "15:00",
                 displayThreshold: 7,
                 displayThresholdUnit: "day",
-                priority: "none",
+                priority: "low",
                 recurrence: {
                     type: "none",
                     duration: 76,
