添加红石事件
红石

--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -818,9 +818,25 @@
                     durationUnit: "week"
                 }
             },
-            // 新增事件：复刻 预测
+            // 新增事件：红石10-17
             {
                 id: 11,
+                name: "红石",
+                startDate: "2025-10-17",
+                startTime: "18:38",
+                displayThreshold: 3,
+                displayThresholdUnit: "hour",
+                priority: "low",
+                recurrence: {
+                    type: "none",
+                    duration: 17,
+                    durationUnit: "hour"
+                }
+            },
+
+            // 新增事件：复刻 预测
+            {
+                id: 12,
                 name: "复刻 预测",
                 startDate: "2025-10-09",
                 startTime: "15:00",
