--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -829,8 +829,8 @@
                 priority: "low",
                 recurrence: {
                     type: "none",
-                    duration: 17,
-                    durationUnit: "hour"
+                    duration: 412,
+                    durationUnit: "minute"
                 }
             },
 
