--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -826,7 +826,7 @@
                 startTime: "18:38",
                 displayThreshold: 3,
                 displayThresholdUnit: "hour",
-                priority: "low",
+                priority: "medium",
                 recurrence: {
                     type: "none",
                     duration: 952,
@@ -858,13 +858,73 @@
                 startTime: "22:48",
                 displayThreshold: 3,
                 displayThresholdUnit: "hour",
-                priority: "low",
+                priority: "medium",
                 recurrence: {
                     type: "none",
                     duration: 952,
                     durationUnit: "minute"
                 }
             },
+            // 新增事件：红石10-25
+            {
+                id: 14,
+                name: "红石",
+                startDate: "2025-10-25",
+                startTime: "22:48",
+                displayThreshold: 3,
+                displayThresholdUnit: "hour",
+                priority: "medium",
+                recurrence: {
+                    type: "none",
+                    duration: 952,
+                    durationUnit: "minute"
+                }
+            },
+            // 新增事件：红石10-27
+            {
+                id: 15,
+                name: "红石",
+                startDate: "2025-10-27",
+                startTime: "17:28",
+                displayThreshold: 3,
+                displayThresholdUnit: "hour",
+                priority: "medium",
+                recurrence: {
+                    type: "none",
+                    duration: 952,
+                    durationUnit: "minute"
+                }
+            },            // 新增事件：红石10-31
+            {
+                id: 16,
+                name: "红石",
+                startDate: "2025-10-31",
+                startTime: "22:48",
+                displayThreshold: 3,
+                displayThresholdUnit: "hour",
+                priority: "medium",
+                recurrence: {
+                    type: "none",
+                    duration: 952,
+                    durationUnit: "minute"
+                }
+            },
+            // 新增事件：红石11-01
+            {
+                id: 17,
+                name: "红石",
+                startDate: "2025-10-01",
+                startTime: "22:48",
+                displayThreshold: 3,
+                displayThresholdUnit: "hour",
+                priority: "medium",
+                recurrence: {
+                    type: "none",
+                    duration: 952,
+                    durationUnit: "minute"
+                }
+            },
+
 
         ];
 
