--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -2139,7 +2139,7 @@
                 // 生成包含当前日期的文件名
                 const now = new Date();
                 const dateStr = now.toISOString().split('T')[0];
-                a.download = `时间项目提醒_${dateStr}.html`;
+                a.download = `Sky 事件 时间_${dateStr}.html`;
                 
                 a.href = url;
                 document.body.appendChild(a);
