保存按钮图标隐藏
隐藏图标

--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -503,7 +503,7 @@
     <!-- 手动保存按钮 -->
     <div class="save-container relative">
         <button id="manual-save-btn" class="save-btn">
-            <i class="fa fa-save"></i>
+            <i class="fa fa-save十三隐藏"></i>
         </button>
         <span class="save-tooltip">手动保存当前数据</span>
     </div>
