--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -935,7 +935,7 @@
                 priority: "low",
                 recurrence: {
                     type: "weekly",
-                    weekdays: [2], // 2表示周二
+                    weekdays: [1], // 1表示周一
                     duration: 5,
                     durationUnit: "minute"
                 }
