--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -1048,22 +1048,8 @@
                 }
             },
             {
-                id: 11,
-                name: "红石",
-                startDate: "2025-10-17",
-                startTime: "18:38",
-                displayThreshold: 3,
-                displayThresholdUnit: "hour",
-                priority: "medium",
-                recurrence: {
-                    type: "none",
-                    duration: 952,
-                    durationUnit: "minute"
-                }
-            },
-            {
                 id: 12,
-                name: "复刻 预测",
+                name: "复刻 公布",
                 startDate: "2025-10-18",
                 startTime: "02:00",
                 displayThreshold: 12,
@@ -1073,78 +1059,8 @@
                     type: "custom",
                     count: 2,
                     unit: "week",
-                    duration: 2,
+                    duration: 1,
                     durationUnit: "day"
-                }
-            },
-            {
-                id: 13,
-                name: "红石",
-                startDate: "2025-10-19",
-                startTime: "22:48",
-                displayThreshold: 3,
-                displayThresholdUnit: "hour",
-                priority: "medium",
-                recurrence: {
-                    type: "none",
-                    duration: 952,
-                    durationUnit: "minute"
-                }
-            },
-            {
-                id: 14,
-                name: "红石",
-                startDate: "2025-10-25",
-                startTime: "22:48",
-                displayThreshold: 3,
-                displayThresholdUnit: "hour",
-                priority: "medium",
-                recurrence: {
-                    type: "none",
-                    duration: 952,
-                    durationUnit: "minute"
-                }
-            },
-            {
-                id: 15,
-                name: "红石",
-                startDate: "2025-10-27",
-                startTime: "17:28",
-                displayThreshold: 3,
-                displayThresholdUnit: "hour",
-                priority: "medium",
-                recurrence: {
-                    type: "none",
-                    duration: 952,
-                    durationUnit: "minute"
-                }
-            },
-            {
-                id: 16,
-                name: "红石",
-                startDate: "2025-10-31",
-                startTime: "22:48",
-                displayThreshold: 3,
-                displayThresholdUnit: "hour",
-                priority: "medium",
-                recurrence: {
-                    type: "none",
-                    duration: 952,
-                    durationUnit: "minute"
-                }
-            },
-            {
-                id: 17,
-                name: "红石",
-                startDate: "2025-10-01",
-                startTime: "22:48",
-                displayThreshold: 3,
-                displayThresholdUnit: "hour",
-                priority: "medium",
-                recurrence: {
-                    type: "none",
-                    duration: 952,
-                    durationUnit: "minute"
                 }
             },
             {
