更改贝壳等级
163

--- a/SS/sky/163/index.html
+++ b/SS/sky/163/index.html
@@ -1052,7 +1052,7 @@
                 startTime: "00:00",
                 displayThreshold: 5,  // 修改为5分钟提前提醒
                 displayThresholdUnit: "minute",
-                priority: "medium",
+                priority: "low",
                 recurrence: {
                     type: "custom",
                     count: 30,
