--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -1091,6 +1091,22 @@
                     durationUnit: "day"
                 }
             },
+
+            {
+                id: 20,
+                name: "染料商店 重置",
+                startDate: "2025-10-14",
+                startTime: "00:00", // 太平洋时间 00:00 = 北京时间 15:00/16:00
+                displayThreshold: 1,
+                displayThresholdUnit: "day",
+                priority: "low",
+                recurrence: {
+                    type: "weekly",
+                    weekdays: [1],
+                    duration: 1,
+                    durationUnit: "day"
+                }
+
             {
                 id: 19,
                 name: "破晓 红石",
