--- a/SS/sky/13/index.html
+++ b/SS/sky/13/index.html
@@ -1022,7 +1022,7 @@
             },
             {
                 id: 4,
-                name: "献祭 重置↻",
+                name: "献祭 重置↻ ♺ ♻  🗘",
                 startDate: getTodayDate(),
                 startTime: "15:00",
                 displayThreshold: 1,
