--- a/SS/sky/163/index.html
+++ b/SS/sky/163/index.html
@@ -1153,6 +1153,20 @@
                 }
             },
             {
+                id:10,
+                name: "迁徙季",
+                startDate: "2025-10-24",
+                startTime: "00:00", 
+                displayThreshold: 3,
+                displayThresholdUnit: "day",
+                priority: "low",
+                recurrence: {
+                    type: "none",
+                    duration: 77,
+                    durationUnit: "day"
+                }
+            },
+            {
                 id: 9,
                 name: "家具 轮换",
                 startDate: getTodayDate(),
