修正空间站事件时间
sky

--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -1164,9 +1164,9 @@
                 priority: "low",
                 recurrence: {
                     type: "weekly",
-                    weekdays: [4],
-                    duration: 5,
-                    durationUnit: "hour"
+                    weekdays: [3],
+                    duration: 1,
+                    durationUnit: "day"
                 }
             },
             {
