快捷文本改复制
快捷复制

--- a/SS/KJFZ/index.html
+++ b/SS/KJFZ/index.html
@@ -1,7 +1,7 @@
 <html lang="zh-CN"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>十三 | 快捷回复</title>
+    <title>十三 | 快捷复制</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; }
         body { background-color: #121212; color: #e0e0e0; padding: 20px; min-height: 100vh; position: relative; }
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <h1 class="title">快捷回复</h1>
+    <h1 class="title">快捷复制</h1>
     
     <div class="category-bar" id="categoryBar">
         <div class="category-btn" data-category="all">全部</div>
