复刻数据修改
复刻

--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -1150,8 +1150,8 @@
                     type: "custom",
                     count: 2,
                     unit: "week",
-                    duration: 10,
-                    durationUnit: "minute"
+                    duration: 4,
+                    durationUnit: "day"
                 }
             },
             {
