新增万圣节
163

--- a/SS/sky/163/index.html
+++ b/SS/sky/163/index.html
@@ -1167,6 +1167,20 @@
                 }
             },
             {
+                id: 11,
+                name: "万圣节",
+                startDate: "2025-10-31",
+                startTime: "00:00", 
+                displayThreshold: 3,
+                displayThresholdUnit: "day",
+                priority: "low",
+                recurrence: {
+                    type: "none",
+                    duration: 3,
+                    durationUnit: "week"
+                }
+            },
+            {
                 id: 9,
                 name: "家具 轮换",
                 startDate: getTodayDate(),
