新增狼人杀活动
163

--- a/SS/sky/163/index.html
+++ b/SS/sky/163/index.html
@@ -1181,6 +1181,19 @@
                 }
             },
             {
+                id: 12,
+                name: "狼人杀 活动",
+                startDate: "2025-11-19",
+                startTime: "00:00", 
+                displayThreshold: 3,
+                displayThresholdUnit: "day",
+                priority: "low",
+                recurrence: {
+                    type: "none",
+                    duration: 3,
+                    durationUnit: "week"
+                }
+            {
                 id: 9,
                 name: "家具 轮换",
                 startDate: getTodayDate(),
