--- a/SS/sky/163/index.html
+++ b/SS/sky/163/index.html
@@ -1193,6 +1193,35 @@
                     duration: 2,
                     durationUnit: "week"
                 }
+            },
+            {
+                id: 13,
+                name: "全图大蜡",
+                startDate: "2025-11-14",
+                startTime: "00:00", 
+                displayThreshold: 1,
+                displayThresholdUnit: "day",
+                priority: "medium",
+                recurrence: {
+                    type: "none",
+                    duration: 1,
+                    durationUnit: "week"
+                }
+            },
+            {
+                id: 13,
+                name: "双倍魔法",
+                startDate: "2025-11-07",
+                startTime: "00:00", 
+                displayThreshold: 1,
+                displayThresholdUnit: "day",
+                priority: "medium",
+                recurrence: {
+                    type: "none",
+                    duration: 1,
+                    durationUnit: "week"
+                }
+            },
             {
                 id: 9,
                 name: "家具 轮换",
