--- a/SS/sky/163/index.html
+++ b/SS/sky/163/index.html
@@ -1201,7 +1201,7 @@
                 startTime: "00:00", 
                 displayThreshold: 1,
                 displayThresholdUnit: "day",
-                priority: "medium",
+                priority: "low",
                 recurrence: {
                     type: "none",
                     duration: 1,
@@ -1215,7 +1215,7 @@
                 startTime: "00:00", 
                 displayThreshold: 1,
                 displayThresholdUnit: "day",
-                priority: "medium",
+                priority: "low",
                 recurrence: {
                     type: "none",
                     duration: 1,
