迁徙季-隐藏
sky

--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -1176,7 +1176,7 @@
                 startTime: "00:00", // 太平洋时间 00:00 = 北京时间 15:00/16:00
                 displayThreshold: 3,
                 displayThresholdUnit: "day",
-                priority: "low",
+                priority: "none",
                 recurrence: {
                     type: "none",
                     duration: 77,
