增加复刻 公布
163

--- a/SS/sky/163/index.html
+++ b/SS/sky/163/index.html
@@ -1227,6 +1227,22 @@
                 }
             },
             {
+                id: 16,
+                name: "复刻 公布",
+                startDate: "2025-10-28",
+                startTime: "12:00",
+                displayThreshold: 1,
+                displayThresholdUnit: "day",
+                priority: "low",
+                recurrence: {
+                    type: "custom",
+                    count: 2,
+                    unit: "week",
+                    duration: 1,
+                    durationUnit: "day"
+                }
+            },
+            {
                 id: 9,
                 name: "家具 轮换",
                 startDate: getTodayDate(),
