--- a/SS/sky/163/13/index.html
+++ b/SS/sky/163/13/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>破晓红石与黑石事件日历</title>
+    <title>破晓红黑石事件日历</title>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -476,7 +476,7 @@
 <body class="min-h-screen">
     <div class="max-w-7xl mx-auto">
         <!-- 页面标题 -->
-        <h1 class="text-2xl md:text-3xl font-bold text-center text-slate-800 mb-4">破晓红石与黑石事件日历</h1>
+        <h1 class="text-2xl md:text-3xl font-bold text-center text-slate-800 mb-4">破晓 红石 黑石 事件日历</h1>
         
         <!-- 月份导航 - 高度压缩版本 -->
         <div class="month-navigation rounded-xl mb-4">
