--- a/SS/sky/163/index.html
+++ b/SS/sky/163/index.html
@@ -1103,7 +1103,7 @@
                 name: "圣岛贝壳",
                 startDate: getTodayDate(),
                 startTime: "00:00",
-                displayThreshold: 5,
+                displayThreshold: 3,
                 displayThresholdUnit: "minute",
                 priority: "low",
                 recurrence: {
@@ -1226,7 +1226,7 @@
                 startTime: "00:00", 
                 displayThreshold: 3,
                 displayThresholdUnit: "day",
-                priority: "low",
+                priority: "none",
                 recurrence: {
                     type: "none",
                     duration: 3,
