--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -311,7 +311,7 @@
         }
 
         [data-theme="light"] {
-            --bg-color: #f8fafc;
+            --bg-color: #f5f5f5;
             --card-color: #ffffff;
             --text-color: #1e293b;
             --text-secondary: #64748b;
