--- a/SS/sky/HHS.html
+++ b/SS/sky/HHS.html
@@ -596,7 +596,7 @@
                 ]
             },
             group2: {
-                days: [3, 9, 15, 17, 21, 27],
+                days: [3, 9, 15, 21, 27],
                 cancelDays: [2, 3], // 周二、周三取消
                 timeSlots: [
                     { start: "17:28", end: "21:20" },
@@ -605,7 +605,7 @@
                 ]
             },
             group3: {
-                days: [5, 11, 23, 29],
+                days: [5, 11, 17, 23, 29],
                 cancelDays: [3, 4], // 周三、周四取消
                 timeSlots: [
                     { start: "18:38", end: "22:30" },
