--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -1425,10 +1425,24 @@
                 startTime: "00:00", // 太平洋时间 00:00 = 北京时间 15:00/16:00
                 displayThreshold: 3,
                 displayThresholdUnit: "day",
-                priority: "low",
+                priority: "none",
                 recurrence: {
                     type: "none",
                     duration: 3,
+                    durationUnit: "week"
+                }
+            },
+            {
+                id: 11,
+                name: "集体 复刻",
+                startDate: "2025-11-17",
+                startTime: "00:00", // 太平洋时间 00:00 = 北京时间 15:00/16:00
+                displayThreshold: 3,
+                displayThresholdUnit: "day",
+                priority: "low",
+                recurrence: {
+                    type: "none",
+                    duration: 2,
                     durationUnit: "week"
                 }
             },
