--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -1514,7 +1514,7 @@
                 startTime: "10:00", // 太平洋时间 10:00 = 北京时间 次日01:00/02:00
                 displayThreshold: 15,
                 displayThresholdUnit: "minute",
-                priority: "medium",
+                priority: "none",
                 recurrence: {
                     type: "custom_complex",
                     pattern: "dream_skating",
