--- a/SS/sky/163/index.html
+++ b/SS/sky/163/index.html
@@ -1272,7 +1272,7 @@
                 recurrence: {
                     type: "none",
                     duration: 1,
-                    unit: "week"
+                    durationUnit: "week"
                 }
             },
             {
