--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -759,7 +759,7 @@
     <!-- 下载按钮 -->
     <div class="download-container relative">
         <button id="download-btn" class="download-btn">
-            <i class="fa fa-download"></i>
+            <i class="fa fa-download隐藏"></i>
         </button>
         <span class="download-tooltip">保存当前事件到HTML文件</span>
     </div>
@@ -767,7 +767,7 @@
     <!-- 保存按钮 -->
     <div class="save-container relative">
         <button id="manual-save-btn" class="save-btn">
-            <i class="fa fa-save"></i>
+            <i class="fa fa-save隐藏"></i>
         </button>
         <span class="save-tooltip">手动保存当前数据</span>
     </div>
