--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -1509,8 +1509,8 @@
                 name: "破晓 红石",
                 startDate: getTodayDate(),
                 startTime: "07:48", // 太平洋时间，对应第一组的第一个时间段
-                displayThreshold: 60,
-                displayThresholdUnit: "minute",
+                displayThreshold: 2,
+                displayThresholdUnit: "hour",
                 priority: "high",
                 recurrence: {
                     type: "custom_complex",
