--- a/SS/sky/163/index.html
+++ b/SS/sky/163/index.html
@@ -1195,8 +1195,8 @@
                 name: "破晓 红石",
                 startDate: getTodayDate(),
                 startTime: "07:08",
-                displayThreshold: 30,
-                displayThresholdUnit: "minute",
+                displayThreshold: 3,
+                displayThresholdUnit: "hour",
                 priority: "high",
                 recurrence: {
                     type: "custom_complex",
