--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -2222,9 +2222,9 @@
             
             let recurrenceText = "";
             if (task.recurrence.type === "custom_complex" && task.recurrence.pattern === "dawn_redstone") {
-                recurrenceText = "破晓红石特殊规则";
+                recurrenceText = "红石规则";
             } else if (task.recurrence.type === "custom_complex" && task.recurrence.pattern === "dream_skating") {
-                recurrenceText = "圆梦滑冰特殊规则";
+                recurrenceText = "滑冰规则";
             } else {
                 switch(task.recurrence.type) {
                     case "none":
