--- a/SS/sky/index.html
+++ b/SS/sky/index.html
@@ -2422,9 +2422,9 @@
             // 生成重复方式文本
             let recurrenceText = "";
             if (currentTask.recurrence.type === "custom_complex" && currentTask.recurrence.pattern === "dawn_redstone") {
-                recurrenceText = "破晓红石特殊规则";
+                recurrenceText = "红石规则";
             } else if (currentTask.recurrence.type === "custom_complex" && currentTask.recurrence.pattern === "dream_skating") {
-                recurrenceText = "圆梦滑冰特殊规则";
+                recurrenceText = "滑冰规则";
             } else {
                 switch(currentTask.recurrence.type) {
                     case "none":
