--- a/SS/sky/TRAE/163/index.html
+++ b/SS/sky/TRAE/163/index.html
@@ -236,6 +236,11 @@
             }
             /* 手机端优化 */
             @media (max-width: 640px) {
+                /* 调整主题切换按钮和魔法图标更靠左 */
+                .theme-toggle-container {
+                    left: 1px !important;
+                }
+                
                 .app-expanded {
                     padding: 1rem;
                     max-width: 100%;
